--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "mysql": "^2.16.0"
+      "express": "^4.16.4",
+      "fs": "0.0.1-security",
+      "mysql": "^2.16.0"
   }
 }
